--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,7 @@
 {
-  "undef": true,
-  "unused": true,
+//   "undef": true,
+//   "unused": true,
+  "asi" : true,
   "globals": {
     "MY_GLOBAL": true
   }
