--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "homepage": "https://github.com/HonzoBonzo/NurseSchedulingFrontend#readme",
   "devDependencies": {
     "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
+    "angular-material": "^1.1.4",
+    "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
