--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
+    "angular-lodash": "^0.1.1",
     "angular-material": "^1.1.4",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
