--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
+    "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.1.1",
+    "gulp-run-sequence": "^0.3.2",
     "gulp-uglify": "^2.1.2",
     "jshint": "^2.9.4",
     "lodash": "^4.17.4"
