--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-notify": "^3.0.0",
     "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.2",
