--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-exec": "^2.1.3",
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
